--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -38,3 +38,53 @@
   align-items: center;
   justify-content: center;
 }
+@mixin justify-start-align-center {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+}
+@mixin justify-space-between {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+@mixin justify-space-between-align-center {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+@mixin column-between {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+@mixin justify-end {
+  display: flex;
+  justify-content: flex-end;
+}
+@mixin justify-end-align-center {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+@mixin justify-center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+@mixin column-align-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@mixin align-center {
+  display: flex;
+  align-items: center;
+}
+@mixin text-center($lineHeight) {
+  text-align: center;
+  line-height: #{$lineHeight}px;
+}
